# fritzbox-logs-analyzer

./: Cargo.toml  README.md
src/: main.rs
